# cpp2-labs-2024

./: .gitignore  readme.md
lab01(done)/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab01  main.cpp
lab01(done)/mymath/: CMakeLists.txt  Makefile  cmake_install.cmake  mymath.cpp  mymath.h
lab01(done)/secLib/: CMakeLists.txt  Makefile  cmake_install.cmake  secLib.cpp  secLib.h
lab02(done)/: CmakeLists.txt  main.cpp
lab02(done)/Form/: CmakeLists.txt  Form.cpp  Form.hpp  задание.txt
lab02(done)/Planet/: Planet.cpp  Planet.hpp
lab03(done)/: CmakeLists.txt  main.cpp
lab03(done)/Fractions/: CmakeLists.txt  Fractions.cpp  Fractions.hpp
lab04/: CmakeLists.txt  main.cpp
lab04(done)/: main.cpp
lab04(done)/MyStack/: MyStack.hpp
lab04/MyStack/: CmakeLists.txt  MyStack.cpp  MyStack.hpp
lab05/: main.cpp
lab05(done)/: CMakeLists.txt  main.cpp  test.cpp
lab05(done)/MyStl/: MySet.hpp  MyVector.hpp
lab05/MyStl/: MySet.hpp  MyVector.hpp
lab06/: CMakeLists.txt  main.cpp
lab06(done)/: CMakeLists.txt  main.cpp
lab06(done)/Polynomial/: Polynomial.cpp  Polynomial.hpp
lab06/Polynomial/: CMakeLists.txt  MyVector.hpp  Polynomial.cpp  Polynomial.hpp
lab07(done)/: CMakeLists.txt  main.cpp
lab07(done)/MyLib/: CMakeLists.txt  MyLib.cpp  MyLib.hpp
lab08/: main.cpp
lab08(done)/: CMakeLists.txt  main.cpp
